--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -32,7 +32,7 @@
   <tfoot>
     <tr>
       <td colspan="{{ data.0.keys|length|add:"6" }}">
-        <sup>1</sup>Based on up to the past <strong>30 days</strong> performance with the current <strong>number of tickets remaining</strong>, <strong>95%</strong> of 10,000 simulations <strong>completed this fast or faster</strong>
+        <sup>1</sup><strong>95%</strong> of 10,000 simulations <strong>completed this fast or faster</strong> based on up to the past <strong>30 days</strong> performance with the current number of tickets remaining. 
       </td>
     </tr>
   </tfoot>
