--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -16,7 +16,8 @@
     {% for key in data.0.keys %}
         <th rowspan="2">{{ key }}</th>
     {% endfor %}
-        <th data-orderable="false" data-search="false" rowspan="2">Forecast<sup>1</sup></th>
+        <th data-orderable="true" data-search="false" rowspan="2">Target date</th>
+        <th data-orderable="true" data-search="false" rowspan="2">Forecast<sup>1</sup></th>
         <th data-orderable="false" data-search="false" colspan="2">Today</th>
         <th data-orderable="false" data-search="false" colspan="2">Last week</th>
         <th data-orderable="false" data-search="false" rowspan="2">Filter</th>
@@ -42,7 +43,12 @@
           {% for value in row.values %}
           <td>{{ value }}</td>
           {% endfor %}
-          <td>
+          <td data-order="{{ row.xtras.target_date|date:"Y-m-d"}}">
+            {% if row.xtras.target_date %}
+              {{ row.xtras.target_date|date:"n/j" }}
+            {% endif %}
+          </td>
+          <td data-order="{{ row.xtras.predictions.2|week_ending|date:"Y-m-d"}}">
             {% if row.xtras.predictions %}
               <a href="{% url 'forecast' row.xtras.jira_summary.filter_id %}" title="View forecast"><span class="glyphicon glyphicon-calendar"></span></a> {{ row.xtras.predictions.2|week_ending|date:"n/j" }} 
             {% endif %}
