--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -33,7 +33,9 @@
   <tfoot>
     <tr>
       <td colspan="{{ data.0.keys|length|add:"6" }}">
-        <sup>1</sup><strong>95%</strong> of 10,000 simulations <strong>completed this fast or faster</strong> based on up to the past <strong>30 days</strong> performance with the current number of tickets remaining. 
+        <sup>1</sup><strong>95%</strong> of 10,000 simulations <strong>completed this fast or faster</strong> based on up to the past <strong>30 days</strong> performance with the current number of tickets remaining.<br>
+        Changes in scope or rate of delivery will affect the date (less scope and faster delivery == sooner and vice versa)<br>
+        For a deeper analysis, click the calendar link next to the forecast (<span class="glyphicon glyphicon-calendar"></span>) and tweak the remaining scope or the number of days of history used in the forecast.
       </td>
     </tr>
   </tfoot>
